--- a/css/index.css
+++ b/css/index.css
@@ -41,11 +41,24 @@ body {
 /*nav*/
 .sec-nav {	
 	height: 50px;
-	font-size: 20px;
 	line-height: 50px;
 	color: #555;
 	background-color: #f0f5f7;
+	border: 1px solid #a6b7cb;
 }
 .sec-nav .center-nav {
-	margin-right: 30px;
+	text-align: center;
+	width:100px;
+	padding: 0 auto;
+	font-size: 12px;
+	color: #a6b7cb;
+	border-right: 1px dashed #a6b7cb;
+}
+
+#game-list {
+	font-size: 20px;
+	width: 180px;
+	background-color: #6686ab;
+	color: #fff;
+	border-right: none;
 }
